# ARES

./: .gitignore  .gitmodules  AGENTS.md  AGENT_PROMPT.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.txt  ARES_PROJECT_STATUS.md  ARES_webui_audit_2026-07-17.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT.md  CODEBASE_SUMMARY.txt  COLLABORATION_SUMMARY.md  COMMERCIAL-LICENSE.md  CONNECTION_ISSUES.md  CONTRIBUTING.md  FINAL_DELIVERABLE.md  HERMES_DEBRIEF.md  INSTALL.md  INTEGRATION_LOG.md  Info.plist.template  LICENSE  MASTER_PROMPT.md  MISSING_ITEMS_AUDIT.md  PHASE_2_COMPLETION.md  PORT_HERMES_WEBUI.md  PRODUCTION_PLAN.md  Package.swift  QUICK_START.md  README.md  ROADMAP.md  SERIES_MASTER_PLAN.md  TESTING.md  ares.toml.example  build_app.sh  ctl.sh  fix-hermes-connection.sh  hermes-brain.Modelfile  install.sh  (+6 more)
.build/: build.db  plugin-tools.yaml
.claude/: AGENTS.md  CLAUDE.md  DESIGN.md  FOUNDATION.md  NEXT_STEPS.md  ROADMAP.md  TESTING.md  VISION_VALIDATION.md
ARES-Desktop/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Package.swift  README.md  SECURITY.md  build-app.sh
ARES-Face/: ARCHITECTURE-COMPARISON.md  AVATAR_DESIGN_SPEC.md  AppIcon.icns  OS1-LESSONS.md  Package.swift
ARES-Mac_os/: README.md  build-app.sh
ARES-Modules/: Package.swift
ARES-Windows/: CLAUDE.md  INSTALL.md  build-windows.ps1
Docs/: ARCHITECTURE.md
api/: config.py  gateway_chat.py  helpers.py  models.py  profiles.py  routes.py  session_ops.py  session_recovery.py  streaming.py
ares/: __init__.py  __main__.py  api.py  cli.py  config.py  daemon.py  discovery.py  mcp_serve.py  memory.py  memory_store.py  reasoning.py  sync.py  thought_dag.py
benchmarks/: bench_accurate.py  bench_all.py  bench_quick.py  bench_results.json
docs/: AGENT_HANDOFF.md  ALPHA_READINESS.md  ARES_CODEBASE_AUDIT.md  ARES_GUEST_FRAMEWORK.md  BIDIRECTIONAL_COLLABORATION.md  COLLABORATION_SETUP.md  CONNECTING.md  EXTENSIONS.md  JAEGERAI-INTEGRATION.md  MODULAR_ARCHITECTURE.md  MODULE_PLAN.md  PROGRESS_REPORT.md  QUICKSTART_COLLABORATION.md  VISUAL_EXAMPLE.md  advanced-chat-setup.md  ares-today-dashboard-design-memo.md  ares_handoff.md  audit-report.md  companion-journal.md  index.html  jros-integration.md  product-vision.md  si-disabled.md  source-ownership.md  tauri-installation-and-testing.md  twin_state.json  twin_todo.json  upstream-sync-2026-07-12.md
docs/reference/lilith-ai/: app.py  character_generator.py  character_library.py  inference.py  ports.py  pyproject.toml  registry.py
governance/: finance.yaml  firmware.yaml  motors.yaml  publishing.yaml
observer/: IMPLEMENTATION_STATUS.md  README.md  com.ares.observer.plist  config.yaml  observer.py  test_observer.py
pr-artifacts/: context-replay-failure-cases.md
scripts/: build_proto.sh  si_doctor.py  smoke_si_init.sh  stress_daemon.py  talk_ares.py  update.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
static/: boot.js  commands.js  i18n.js  index.html  messages.js  panels.js  sessions.js  style.css  ui.js  workspace.js
tests/: conftest.py  test_1062_busy_input_modes.py  test_732_gateway_routing_metadata.py  test_anchor_fallback_ownership.py  test_chat_start_claim_cli_session.py  test_cli_only_slash_commands.py  test_composer_draft_after_send.py  test_gateway_sync.py  test_hidden_tab_server_initiated_turn.py  test_issue1217_transcript_compaction.py  test_issue1690_scroll_completion.py  test_issue2698_isolated_hermes_home.py  test_issue2941_wiki_browse.py  test_issue3797_kanban_cli_parity.py  test_issue3929_process_wakeup_pause.py  test_issue3966_session_count_label.py  test_issue3996_sse_visibility.py  test_issue4746_extension_gallery.py  test_issue4754_approval_dismiss_persist.py  test_issue4812_session_sse_contract_rfc.py  test_issue4814_mermaid_toolbar.py  (+17 more)
(+3905 files in other folders)
