[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ares-system"
version = "0.2.0"
description = "ARES — Autonomous Reasoning & Execution System"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "mcp>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
bus = [
    "pyzmq>=25.0",
]
screen = [
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
dev = [
    "ares-system[bus]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
]

[project.scripts]
ares = "ares.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ares*"]