[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lilith_ai"
version = "0.1.0"
description = "A locally-running conversational AI with a real-time, adjustable personality system"
readme = "README.md"
authors = [
    { name = "Jenkins Robotics" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "llama-cpp-python>=0.2.0",
    "matplotlib>=3.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
